--- a/Eindopdracht:KleurenToggle/style.css
+++ b/Eindopdracht:KleurenToggle/style.css
@@ -6,10 +6,9 @@ body {
 .nav-main {
     position: fixed;
     top: 0;
-    width: 100%;
     height: 60px;
     
-    z-index: 1000;
+    
 }
 
 .btn-toggle-nav{
@@ -32,37 +31,71 @@ body {
 
 .nav-sidebar{
     position: fixed;
-    left: 0;
+    left: 0px;
     top: 60px;
     width: 200px;
     padding: 0 5px;
-    height: 400px;
-    background-color:black;
+    height: 300px;
+    background-color:grey;
     z-index: 1000;
     visibility:hidden;
+    margin: 0;
+    padding-left: 0;
 }
 
 
 .nav-sidebar ul {
-    padding-top:15px;
-   
+    width: 300px;
+    left: 0px;
+    margin-left: 0px;
+    padding-left: 0px;
+    padding-top: 0px;
+    margin-top: 0px;
+
 
 }
 
 .nav-sidebar ul li  {
     line-height: 60px;
     list-style: none;
+    left: 0px;
+    margin-bottom: 2px;
+    
     
 }
 .nav-sidebar ul li a{
     display: block;
     height: 60px;
-    padding: 0 10px;
+    padding: 0 60px;
     text-decoration: none;
     text-transform: uppercase;
-    color: white ;
+    color: black ;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     white-space: nowrap;
+}
+
+
+
+ 
+#home{
+    background-color: grey;
+}
+
+#red {
+    background-color: red;
+    
+}
+
+#green {
+    background-color: green;
+}
+
+#orange{
+background-color: orange;
+}
+
+#purple{
+    background-color: purple;
 }
 
