--- a/Eindopdracht:KleurenToggle/style.css
+++ b/Eindopdracht:KleurenToggle/style.css
@@ -7,10 +7,12 @@ body {
     position: fixed;
     top: 0;
     height: 60px;
-    
-    
 }
 
+
+
+
+/* Toggle button */
 .btn-toggle-nav{
     width: 60px;
     height: 100%;
@@ -21,14 +23,14 @@ body {
     cursor: pointer;
 }
 
-
-
 .btn-toggle-nav:hover{
    opacity: 0.5;
 }
+/* end Toggle button */
 
 
 
+/*sidebar*/
 .nav-sidebar{
     position: fixed;
     left: 0px;
@@ -39,6 +41,8 @@ body {
     visibility:hidden;
     margin: 0;
     padding-left: 0;
+    background-color: grey;
+    width:300px ;
 }
 
 
@@ -49,6 +53,7 @@ body {
     padding-left: 0px;
     padding-top: 0px;
     margin-top: 0px;
+    border: lightgrey solid 2px;
 
 
 }
@@ -64,17 +69,18 @@ body {
 .nav-sidebar ul li a{
     display: block;
     height: 60px;
-    padding: 0 60px;
+    padding: 0 10px;
     text-decoration: none;
-    text-transform: uppercase;
     color: black ;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Georgia, Times, 'Times New Roman', serif;
     font-size: 16px;
     white-space: nowrap;
 }
 
+/* End sidebar*/
 
 
+/* Background-styles*/
  
 #home{
     background-color: grey;
@@ -96,4 +102,5 @@ background-color: orange;
 #purple{
     background-color: purple;
 }
+
 
